@@ -14,7 +14,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.ws.rs.NotFoundException;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -135,12 +134,12 @@ public class ActionProfileServiceImpl
 
   @Override
   protected List<ProfileAssociation> getProfileAssociationToAdd(ActionProfileUpdateDto dto) {
-    return dto.getAddedRelations().stream().map(profileAssociationConverter::convert).collect(Collectors.toList());
+    return dto.getAddedRelations().stream().map(profileAssociationConverter::convert).toList();
   }
 
   @Override
   protected List<ProfileAssociation> getProfileAssociationToDelete(ActionProfileUpdateDto dto) {
-    return dto.getDeletedRelations().stream().map(profileAssociationConverter::convert).collect(Collectors.toList());
+    return dto.getDeletedRelations().stream().map(profileAssociationConverter::convert).toList();
   }
 
   @Override
@@ -201,7 +200,7 @@ public class ActionProfileServiceImpl
   public List<ProfileAssociation> getAddedRelations(ActionProfileUpdateDto profileUpdateDto) {
     return profileUpdateDto.getAddedRelations().stream()
       .map(profileAssociationConverter::convert)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
@@ -209,7 +208,7 @@ public class ActionProfileServiceImpl
                                                      List<ProfileAssociation> profileAssociations) {
     var deletedRelations = profileAssociations.stream()
       .map((ProfileAssociation a) -> profileAssociationConverter.reverse().convert(a))
-      .collect(Collectors.toList());
+      .toList();
     return profileUpdateDto.withDeletedRelations(deletedRelations);
   }
 
@@ -218,7 +217,7 @@ public class ActionProfileServiceImpl
                                                     List<ProfileAssociation> profileAssociations) {
     var addedRelations = profileAssociations.stream()
       .map((ProfileAssociation a) -> profileAssociationConverter.reverse().convert(a))
-      .collect(Collectors.toList());
+      .toList();
     return profileUpdateDto.withAddedRelations(addedRelations);
   }
 
